--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^9.0.2",
     "mychat": "file:..",
     "path": "^0.12.7",
-    "resend": "^6.6.0"
+    "resend": "^6.6.0",
+    "socket.io": "^4.8.3"
   }
 }
