--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.11.0",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
     "zustand": "^5.0.9"
